# sindarin-treesitter

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py
bindings/c/: tree-sitter-sindarin.h  tree-sitter-sindarin.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_sindarin/: __init__.py  _binding.pyd  binding.c
bindings/python/tree_sitter_sindarin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: declarations.txt  expressions.txt  statements.txt  structs.txt
