[build-system]
requires = ["setuptools>=42", "wheel", "tree-sitter>=0.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-sindarin"
version = "0.1.0"
description = "Tree-sitter grammar for the Sindarin programming language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = [
    "tree-sitter>=0.21.0",
]

[tool.setuptools]
packages = ["tree_sitter_sindarin"]
package-dir = {"tree_sitter_sindarin" = "bindings/python/tree_sitter_sindarin"}
include-package-data = true

[tool.setuptools.package-data]
tree_sitter_sindarin = ["*.pyi", "py.typed", "queries/*"]
